# mkcmt

./: CHANGELOG.md  Cargo.toml  README.md  bacon.toml
.github/workflows/: release-plz.yml
src/: changelog.rs  commit.rs  lib.rs  main.rs
support/: checks.sh
tests/: integration_tests_commit.rs
