[package]
name = "mkcmt"
version = "0.2.2"
authors = ["David Horner"]
description = "mkcmt is make commit.  Conventional Commit Generator"
readme = "README.md"
homepage = "https://github.com/davehorner/mkcmt"
repository = "https://github.com/davehorner/mkcmt"
documentation = "https://docs.rs/mkcmt"
keywords = ["commit", "git", "ai", "conventional-commits"]
categories = ["development-tools", "command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2024"


[dependencies]
genai = { version = "0.1.23", optional = true }
arboard = { version = "3.4.1", optional = true } 
clap = { version = "4.5.32", features = ["derive"] }

[dependencies.tokio_plain]
package = "tokio"
version = "1.44.0"
optional = true
default-features = false

[dependencies.tokio_rt]
package = "tokio"
version = "1.44.0"
optional = true
default-features = false
features = ["rt", "macros"]


[features]
default = ["uses_arboard", "uses_genai", "uses_tokio_rt"]
uses_genai = ["genai"]
uses_arboard = ["arboard"]
uses_tokio_plain = ["tokio_plain"]
uses_tokio_rt = ["tokio_rt"]
arboard = ["dep:arboard"]

